# Sege

./: CMakeLists.txt
src/: main.cpp  numbers.hpp
src/core/: module.cpp  module.hpp
src/core/event/: EventBus.hpp
test/core/event/: EventBusFixture.cpp
